--- a/QiscusUI/View/ChatList/UIChatListViewCell.xib
+++ b/QiscusUI/View/ChatList/UIChatListViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -75,6 +75,12 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="lLH-hd-fNW"/>
+            <connections>
+                <outlet property="imageViewRoom" destination="qlw-zZ-B7p" id="kfk-Dh-Ni0"/>
+                <outlet property="labelDate" destination="J4n-LL-XSH" id="WMQ-1F-Qqv"/>
+                <outlet property="labelLastMessage" destination="uaP-oZ-eCJ" id="6uY-aK-Ygh"/>
+                <outlet property="labelName" destination="dS4-a9-mMR" id="Mx7-Qy-BRA"/>
+            </connections>
             <point key="canvasLocation" x="34" y="91"/>
         </tableViewCell>
     </objects>
