--- a/QiscusUI/Controllers/Chat View/UIChatViewController.xib
+++ b/QiscusUI/Controllers/Chat View/UIChatViewController.xib
@@ -41,10 +41,10 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pcJ-tT-Xn1">
-                            <rect key="frame" x="337" y="10" width="30" height="30"/>
+                            <rect key="frame" x="325" y="0.0" width="50" height="50"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="30" id="F9v-2b-ElU"/>
-                                <constraint firstAttribute="height" constant="30" id="vTY-Og-8cN"/>
+                                <constraint firstAttribute="width" constant="50" id="F9v-2b-ElU"/>
+                                <constraint firstAttribute="height" constant="50" id="vTY-Og-8cN"/>
                             </constraints>
                             <state key="normal" image="send"/>
                             <connections>
@@ -52,7 +52,7 @@
                             </connections>
                         </button>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bXL-df-oZf">
-                            <rect key="frame" x="46" y="10" width="283" height="30"/>
+                            <rect key="frame" x="46" y="10" width="279" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="JHT-gr-j5t"/>
                             </constraints>
@@ -91,8 +91,8 @@
                         <constraint firstItem="bXL-df-oZf" firstAttribute="centerY" secondItem="XjR-Mj-c6H" secondAttribute="centerY" id="73b-Ql-qKM"/>
                         <constraint firstAttribute="height" constant="50" id="JR1-fH-mcK"/>
                         <constraint firstItem="ie2-3Q-gZR" firstAttribute="centerY" secondItem="XjR-Mj-c6H" secondAttribute="centerY" id="Y9K-TJ-LMm"/>
-                        <constraint firstAttribute="trailing" secondItem="pcJ-tT-Xn1" secondAttribute="trailing" constant="8" id="YWz-Rc-mBp"/>
-                        <constraint firstItem="pcJ-tT-Xn1" firstAttribute="leading" secondItem="bXL-df-oZf" secondAttribute="trailing" constant="8" id="ZkP-v1-3NJ"/>
+                        <constraint firstAttribute="trailing" secondItem="pcJ-tT-Xn1" secondAttribute="trailing" id="YWz-Rc-mBp"/>
+                        <constraint firstItem="pcJ-tT-Xn1" firstAttribute="leading" secondItem="bXL-df-oZf" secondAttribute="trailing" id="ZkP-v1-3NJ"/>
                         <constraint firstItem="ie2-3Q-gZR" firstAttribute="leading" secondItem="XjR-Mj-c6H" secondAttribute="leading" constant="8" id="xOU-MS-9Xo"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
