--- a/QiscusUI/View/ChatList/UIChatListViewCell.xib
+++ b/QiscusUI/View/ChatList/UIChatListViewCell.xib
@@ -1,87 +1,126 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="67" id="G6z-cy-t1Q" customClass="UIChatListViewCell" customModule="QiscusUI" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="67"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="UIChatListViewCell" customModule="QiscusUI" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="G6z-cy-t1Q" id="vs8-9j-n54">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="66.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="74.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qlw-zZ-B7p">
-                        <rect key="frame" x="16" y="15.5" width="45" height="35.5"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="UC3-pb-PeH" userLabel="profileImageView">
+                        <rect key="frame" x="21" y="8" width="60" height="60"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="45" id="sgR-CO-Mfe"/>
-                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="45" id="v9l-Fe-ELs"/>
+                            <constraint firstAttribute="height" constant="60" id="0pd-iI-dC6"/>
+                            <constraint firstAttribute="width" constant="60" id="Dai-76-aoe"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chat name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dS4-a9-mMR">
-                        <rect key="frame" x="77" y="10.5" width="139" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nameg" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3dO-lh-ltC" userLabel="label1">
+                        <rect key="frame" x="95" y="10" width="149" height="17"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text message" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uaP-oZ-eCJ">
-                        <rect key="frame" x="77" y="33.5" width="83.5" height="28"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="35" id="L1s-dp-dpD"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="calibratedWhite"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last message..." textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GcT-oK-RZz" userLabel="label2">
+                        <rect key="frame" x="95" y="36" width="101.5" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10/11/2017" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J4n-LL-XSH">
-                        <rect key="frame" x="221" y="10.5" width="75" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yesterday" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="73m-0b-2Yc">
+                        <rect key="frame" x="239" y="8" width="65" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="75" id="StA-6l-GDE"/>
+                            <constraint firstAttribute="width" constant="65" id="LeL-bC-oGw"/>
+                            <constraint firstAttribute="height" constant="21" id="N6K-Z8-PjW"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tb1-Wf-mtC">
-                        <rect key="frame" x="296" y="7" width="24" height="25"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="24" id="JEB-5g-Ijz"/>
-                            <constraint firstAttribute="height" constant="25" id="gHW-1l-nQF"/>
-                        </constraints>
+                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_pin" translatesAutoresizingMaskIntoConstraints="NO" id="Jee-lw-rQq">
+                        <rect key="frame" x="63" y="13" width="20" height="19"/>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aYr-1A-NvS">
+                        <rect key="frame" x="277" y="33" width="30" height="20.5"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99+" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vd9-lp-FVL">
+                                <rect key="frame" x="3.5" y="3" width="22" height="13.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="badgeColor">
+                                        <color key="value" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="size" keyPath="insets">
+                                        <size key="value" width="0.0" height="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.50196078430000002" blue="0.25098039220000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="vd9-lp-FVL" secondAttribute="bottom" constant="4" id="Cvh-xO-pND"/>
+                            <constraint firstAttribute="width" constant="30" id="Eqn-Zv-hB0"/>
+                            <constraint firstItem="vd9-lp-FVL" firstAttribute="centerY" secondItem="aYr-1A-NvS" secondAttribute="centerY" id="Oe2-gW-VHg"/>
+                            <constraint firstItem="vd9-lp-FVL" firstAttribute="centerX" secondItem="aYr-1A-NvS" secondAttribute="centerX" id="kK0-Oy-MD4"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiuss">
+                                <real key="value" value="8"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="J4n-LL-XSH" firstAttribute="centerY" secondItem="tb1-Wf-mtC" secondAttribute="centerY" id="ATT-EO-KpS"/>
-                    <constraint firstItem="qlw-zZ-B7p" firstAttribute="leading" secondItem="vs8-9j-n54" secondAttribute="leading" constant="16" id="BHM-M5-rxZ"/>
-                    <constraint firstAttribute="bottom" secondItem="uaP-oZ-eCJ" secondAttribute="bottom" constant="5" id="VhX-2T-cz8"/>
-                    <constraint firstItem="uaP-oZ-eCJ" firstAttribute="top" secondItem="dS4-a9-mMR" secondAttribute="bottom" constant="5" id="Vo8-hf-C7p"/>
-                    <constraint firstItem="tb1-Wf-mtC" firstAttribute="leading" secondItem="J4n-LL-XSH" secondAttribute="trailing" id="dGb-O8-zha"/>
-                    <constraint firstItem="dS4-a9-mMR" firstAttribute="centerY" secondItem="J4n-LL-XSH" secondAttribute="centerY" id="erq-ev-3Tr"/>
-                    <constraint firstItem="uaP-oZ-eCJ" firstAttribute="leading" secondItem="dS4-a9-mMR" secondAttribute="leading" id="hS8-b0-kc7"/>
-                    <constraint firstItem="tb1-Wf-mtC" firstAttribute="top" secondItem="vs8-9j-n54" secondAttribute="top" constant="7" id="iDa-Vg-VWu"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="qlw-zZ-B7p" secondAttribute="bottom" constant="5" id="kDv-k0-lZ6"/>
-                    <constraint firstItem="dS4-a9-mMR" firstAttribute="leading" secondItem="qlw-zZ-B7p" secondAttribute="trailing" constant="16" id="luh-uL-jbe"/>
-                    <constraint firstItem="qlw-zZ-B7p" firstAttribute="centerY" secondItem="vs8-9j-n54" secondAttribute="centerY" id="oML-He-5DI"/>
-                    <constraint firstAttribute="trailing" secondItem="tb1-Wf-mtC" secondAttribute="trailing" id="xq5-ec-gmb"/>
-                    <constraint firstItem="J4n-LL-XSH" firstAttribute="leading" secondItem="dS4-a9-mMR" secondAttribute="trailing" constant="5" id="zvG-7i-byM"/>
+                    <constraint firstItem="73m-0b-2Yc" firstAttribute="leading" secondItem="3dO-lh-ltC" secondAttribute="trailing" constant="-5" id="5sb-i8-sSd"/>
+                    <constraint firstItem="3dO-lh-ltC" firstAttribute="leading" secondItem="Jee-lw-rQq" secondAttribute="trailing" constant="12" id="5sy-0R-0OE"/>
+                    <constraint firstItem="3dO-lh-ltC" firstAttribute="leading" secondItem="UC3-pb-PeH" secondAttribute="trailing" constant="14" id="ChH-rJ-gQv"/>
+                    <constraint firstItem="Jee-lw-rQq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="D2T-BG-pNY"/>
+                    <constraint firstItem="GcT-oK-RZz" firstAttribute="leading" secondItem="3dO-lh-ltC" secondAttribute="leading" id="HUQ-48-R7c"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Jee-lw-rQq" secondAttribute="bottom" constant="32" id="L6g-rB-p94"/>
+                    <constraint firstAttribute="bottom" secondItem="aYr-1A-NvS" secondAttribute="bottom" constant="21" id="LSS-kF-n2n"/>
+                    <constraint firstItem="UC3-pb-PeH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Mum-DL-Kf8"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="73m-0b-2Yc" secondAttribute="trailing" id="UX9-Qg-CxQ"/>
+                    <constraint firstItem="aYr-1A-NvS" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="GcT-oK-RZz" secondAttribute="trailing" constant="10" id="Uog-hy-Thy"/>
+                    <constraint firstItem="73m-0b-2Yc" firstAttribute="top" secondItem="UC3-pb-PeH" secondAttribute="top" id="ZkB-bU-KUR"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="GcT-oK-RZz" secondAttribute="bottom" constant="11" id="ais-c4-EA0"/>
+                    <constraint firstItem="3dO-lh-ltC" firstAttribute="top" secondItem="UC3-pb-PeH" secondAttribute="top" constant="2" id="b6w-ao-qQr"/>
+                    <constraint firstAttribute="trailing" secondItem="aYr-1A-NvS" secondAttribute="trailing" constant="13" id="bFy-8V-XKa"/>
+                    <constraint firstItem="Jee-lw-rQq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="47" id="hGq-KB-B5u"/>
+                    <constraint firstItem="GcT-oK-RZz" firstAttribute="top" secondItem="3dO-lh-ltC" secondAttribute="bottom" constant="9" id="pz2-1I-OjZ"/>
+                    <constraint firstItem="aYr-1A-NvS" firstAttribute="top" secondItem="73m-0b-2Yc" secondAttribute="bottom" constant="4" id="qPF-An-hCE"/>
+                    <constraint firstItem="UC3-pb-PeH" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="xZ2-8h-lgP"/>
+                    <constraint firstAttribute="bottom" secondItem="UC3-pb-PeH" secondAttribute="bottom" constant="6.5" id="xmK-6g-U91"/>
+                    <constraint firstItem="UC3-pb-PeH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="zr1-Pn-2aL"/>
                 </constraints>
             </tableViewCellContentView>
-            <viewLayoutGuide key="safeArea" id="lLH-hd-fNW"/>
+            <accessibility key="accessibilityConfiguration" identifier="ChatCellIdentifier"/>
             <connections>
-                <outlet property="imageViewRoom" destination="qlw-zZ-B7p" id="kfk-Dh-Ni0"/>
-                <outlet property="labelDate" destination="J4n-LL-XSH" id="WMQ-1F-Qqv"/>
-                <outlet property="labelLastMessage" destination="uaP-oZ-eCJ" id="6uY-aK-Ygh"/>
-                <outlet property="labelName" destination="dS4-a9-mMR" id="Mx7-Qy-BRA"/>
+                <outlet property="imageViewPinRoom" destination="Jee-lw-rQq" id="iQJ-As-auQ"/>
+                <outlet property="imageViewRoom" destination="UC3-pb-PeH" id="nmZ-Ao-O5F"/>
+                <outlet property="labelBadge" destination="vd9-lp-FVL" id="D8l-Eo-UQD"/>
+                <outlet property="labelDate" destination="73m-0b-2Yc" id="xrU-h0-85F"/>
+                <outlet property="labelLastMessage" destination="GcT-oK-RZz" id="kpc-28-Ylc"/>
+                <outlet property="labelName" destination="3dO-lh-ltC" id="Kan-Dy-F1O"/>
+                <outlet property="viewBadge" destination="aYr-1A-NvS" id="1GI-zH-its"/>
             </connections>
-            <point key="canvasLocation" x="34" y="91"/>
+            <point key="canvasLocation" x="33" y="122.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="avatar" width="60" height="60"/>
+        <image name="ic_pin" width="16" height="16"/>
+    </resources>
 </document>
