--- a/Example/Chat Input/CustomChatInput.xib
+++ b/Example/Chat Input/CustomChatInput.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -70,7 +70,7 @@
                         <constraint firstAttribute="height" constant="50" id="MN8-zC-0Qv"/>
                     </constraints>
                     <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <state key="normal" image="attachment"/>
+                    <state key="normal" image="attach"/>
                     <connections>
                         <action selector="clickAttachment:" destination="-1" eventType="touchUpInside" id="kun-jy-4MV"/>
                     </connections>
@@ -105,7 +105,7 @@
         </view>
     </objects>
     <resources>
-        <image name="attachment" width="28" height="28"/>
-        <image name="send" width="28" height="28"/>
+        <image name="attach" width="21" height="21"/>
+        <image name="send" width="21" height="21"/>
     </resources>
 </document>
