--- a/QiscusUI/View/ChatCell/TextCell.xib
+++ b/QiscusUI/View/ChatCell/TextCell.xib
@@ -67,7 +67,6 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="p3w-fh-zvu" secondAttribute="trailing" constant="10" id="MsT-bJ-mTs"/>
                             <constraint firstItem="p3w-fh-zvu" firstAttribute="top" secondItem="5hh-dE-BIu" secondAttribute="top" id="OLt-gF-2wn"/>
@@ -99,6 +98,7 @@
                     <constraint firstItem="5hh-dE-BIu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="eL2-S3-Mjq"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="ivBaloonLeft" destination="Iu0-VT-qD4" id="422-cT-RKi"/>
